# hcrypt

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CREDMAN_README.md  LICENSE  README.md  SECURITY.md
.github/workflows/: codeql-analysis.yml
doc/: all_d.wsd  bcrypt.wsd  bcrypt_d.wsd  hcrypt.wsd  hcrypt_d.wsd  ncrypt.wsd  ncrypt_d.wsd
include/: credman.hpp  credman_ui.hpp  hbcrypt.h  hbcrypt.hpp  hcrypt_common.h  hcrypt_common.hpp  hncrypt.h  hncrypt.hpp
test/: credman_tests.cpp  credman_tests.hpp  hbcrypt_perf_base64.cpp  hbcrypt_perf_base64.hpp  hbcrypt_perf_hash.cpp  hbcrypt_perf_hash.hpp  hbcrypt_test_AES_CBC.cpp  hbcrypt_test_AES_CBC.h  hbcrypt_test_AES_CBC.hpp  hbcrypt_test_AES_CMAC.cpp  hbcrypt_test_AES_CMAC.h  hbcrypt_test_AES_CMAC.hpp  hbcrypt_test_CTAD.cpp  hbcrypt_test_CTAD.hpp  hbcrypt_test_SHA1_HMAC.cpp  hbcrypt_test_SHA1_HMAC.hpp  hbcrypt_test_algorithms.cpp  hbcrypt_test_algorithms.hpp  hbcrypt_test_base64.cpp  hbcrypt_test_base64.hpp  hbcrypt_test_dh_oakley.cpp  hbcrypt_test_dh_oakley.hpp  hbcrypt_test_enum_algorithms.cpp  hbcrypt_test_enum_algorithms.h  hbcrypt_test_enum_algorithms.hpp  hbcrypt_test_enum_contexts.cpp  hbcrypt_test_enum_contexts.hpp  hbcrypt_test_err.cpp  hbcrypt_test_err.hpp  hbcrypt_test_fips.cpp  hbcrypt_test_fips.hpp  hbcrypt_test_hash.cpp  hbcrypt_test_hash.h  hbcrypt_test_hash.hpp  hbcrypt_test_key_derivation.cpp  hbcrypt_test_key_derivation.h  hbcrypt_test_key_derivation.hpp  hbcrypt_test_message_signing.cpp  hbcrypt_test_message_signing.h  hbcrypt_test_message_signing.hpp  (+51 more)
test/perf/: hcrypt_perf.hpp  numa.h  numa.hpp
